	ADDED - SCALE will accept values below 0, and also above 100
	ADDED - USESCALE has two new options: absolute and percent, which allows you to have a SCALE of absolute values
	ADDED - New datasource plugin to support statistics from TheWitness's DSStats Cacti Plugin. This gets you daily,weekly,monthly and annual stats with no complicated rrdtool stuff.
	ADDED - static datasource can be used for negative values
	
0.96a	FIXED - New z-ordering code did not work correctly on PHP4. This broke (at least) the editor. (thanks toe_cutter)
	FIXED - \n is no longer treated as a newline in TARGETs (thanks NetAdmin)
	FIXED - KILO was broken completely between 0.95b and 0.96 (thanks Jethro Binks)
	FIXED - Link comments in certain positions could cause div-by-zero errors. (thanks again Jethro)
	FIXED - USEICONSCALE didn't colorise (broken between 0.95b and 0.96 again) (thanks colejv)
	FIXED - Managed to make LABELOFFSET case-sensitive.

0.96	ADDED - TEMPLATE allows a node or link to copy it's settings from another, instead of from DEFAULT.
	ADDED - RRD datasource can take SET rrd_default_path to make configs a little easier to read.
	ADDED - RRD datasource can take SET rrd_default_in_ds and rrd_default_out_ds for non-Cacti users.
	ADDED - RRD datasource can get Cacti query information (in poller_output mode ONLY) - like ifAlias, ifSpeed etc
	ADDED - RRD datasource can take the ifSpeed/ifHighSpeed from the above, and use it in the map.
	ADDED - RRD datasource fills in Cacti cacti_path_rra and cacti_url with Cacti base path and URL
	ADDED - RRD datasource can take global SET rrd_options to add extra options to rrdtool command lines
	ADDED - SNMP datasource also stores the raw data from the SNMP agent in snmp_raw_in/snmp_raw_out
	ADDED - SNMP datasource allows '-' as an OID, similar to '-' targets in RRDs.
	ADDED - Control the drawing order with ZORDER.
	ADDED - New artificial icons: nink, inpie and outpie. See ICON in manual.